<resources>
    <string name="app_name">Firebase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="query">Query</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="OpenDrawer">Open Navigation drawer</string>
    <string name="CloseDrawer">Close Navigation drawer</string>
</resources>