<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Fragments.add_query">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/curve"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#555555"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@id/edit_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/curve"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#555555"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_Name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@id/edit_Number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/curve"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="#555555"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_Email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@id/edit_Query"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="15dp"
            android:background="@drawable/curve"
            android:gravity="top"
            android:hint="@string/query"
            android:inputType="textLongMessage"
            android:padding="15dp"
            android:imeOptions="actionDone"
            android:textColor="@color/black"
            android:textColorHint="#555555"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_Number" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/grid_curve"
            android:backgroundTint="@color/black"
            android:padding="15dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_Clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/grid_curve"
            android:backgroundTint="@color/black"
            android:padding="15dp"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/button_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>