<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.view_query">



    <TextView
        android:id="@+id/text_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/curve"
        android:hint="@string/name"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#555555"
        android:textSize="18sp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@id/text_Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/curve"
        android:hint="@string/e_mail"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#555555"
        android:textSize="18sp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Name" />

    <TextView
        android:id="@id/text_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/curve"
        android:hint="@string/phone_number"
        android:maxLength="10"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#555555"
        android:textSize="18sp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Email" />

    <TextView
        android:id="@id/text_Query"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="15dp"
        android:background="@drawable/curve"
        android:gravity="top"
        android:hint="@string/query"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="#555555"
        android:textSize="18sp"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_Number" />

</androidx.constraintlayout.widget.ConstraintLayout>
